--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Build, Push, and Deploy E-Shop (v7 - File-based)
+name: Build, Push, and Deploy E-Shop (v8 - File-based)
 
 on:
   push:
@@ -306,3 +306,163 @@ jobs:
     name: Build (order-service)
     needs: [build-base]
     runs-on: ubuntu-latest
+    outputs:
+      built: ${{ steps.set-output.outputs.built }}
+    steps:
+      - uses: actions/checkout@v4
+        with: { fetch-depth: 0 }
+      - id: check-files
+        uses: tj-actions/changed-files@v44
+        with:
+          files: |
+            apps/order-service/**/*
+            packages/**/*
+            Dockerfile.backend
+          base_sha: ${{ github.event.before }}
+      - id: set-flag
+        run: |
+          if [ "${{ steps.check-files.outputs.any_changed }}" == "true" ] || [ "${{ needs.build-base.outputs.built }}" == "true" ]; then
+            echo "run_build=true" >> $GITHUB_OUTPUT
+          else
+            echo "run_build=false" >> $GITHUB_OUTPUT
+          fi
+      - if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/login-action@v3
+        with: { registry: ${{ env.REGISTRY }}, username: ${{ github.actor }}, password: ${{ secrets.GHCR_PAT }} }
+      - if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/setup-buildx-action@v3
+      - id: build-step
+        if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.backend
+          build-args: |
+            APP_NAME=order-service
+          push: true
+          no-cache: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-order-service:latest
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
+      - id: set-output
+        if: ${{ always() }}
+        run: echo "built=${{ steps.build-step.outcome == 'success' }}" >> $GITHUB_OUTPUT
+
+  build-chatting-service:
+    name: Build (chatting-service)
+    needs: [build-base]
+    runs-on: ubuntu-latest
+    outputs:
+      built: ${{ steps.set-output.outputs.built }}
+    steps:
+      - uses: actions/checkout@v4
+        with: { fetch-depth: 0 }
+      - id: check-files
+        uses: tj-actions/changed-files@v44
+        with:
+          files: |
+            apps/chatting-service/**/*
+            packages/**/*
+            Dockerfile.backend
+          base_sha: ${{ github.event.before }}
+      - id: set-flag
+        run: |
+          if [ "${{ steps.check-files.outputs.any_changed }}" == "true" ] || [ "${{ needs.build-base.outputs.built }}" == "true" ]; then
+            echo "run_build=true" >> $GITHUB_OUTPUT
+          else
+            echo "run_build=false" >> $GITHUB_OUTPUT
+          fi
+      - if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/login-action@v3
+        with: { registry: ${{ env.REGISTRY }}, username: ${{ github.actor }}, password: ${{ secrets.GHCR_PAT }} }
+      - if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/setup-buildx-action@v3
+      - id: build-step
+        if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.backend
+          build-args: |
+            APP_NAME=chatting-service
+          push: true
+          no-cache: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-chatting-service:latest
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
+      - id: set-output
+        if: ${{ always() }}
+        run: echo "built=${{ steps.build-step.outcome == 'success' }}" >> $GITHUB_OUTPUT
+
+  build-kafka-service:
+    name: Build (kafka-service)
+    needs: [build-base]
+    runs-on: ubuntu-latest
+    outputs:
+      built: ${{ steps.set-output.outputs.built }}
+    steps:
+      - uses: actions/checkout@v4
+        with: { fetch-depth: 0 }
+      - id: check-files
+        uses: tj-actions/changed-files@v44
+        with:
+          files: |
+            apps/kafka-service/**/*
+            packages/**/*
+            Dockerfile.backend
+          base_sha: ${{ github.event.before }}
+      - id: set-flag
+        run: |
+          if [ "${{ steps.check-files.outputs.any_changed }}" == "true" ] || [ "${{ needs.build-base.outputs.built }}" == "true" ]; then
+            echo "run_build=true" >> $GITHUB_OUTPUT
+          else
+            echo "run_build=false" >> $GITHUB_OUTPUT
+          fi
+      - if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/login-action@v3
+        with: { registry: ${{ env.REGISTRY }}, username: ${{ github.actor }}, password: ${{ secrets.GHCR_PAT }} }
+      - if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/setup-buildx-action@v3
+      - id: build-step
+        if: steps.set-flag.outputs.run_build == 'true'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile.backend
+          build-args: |
+            APP_NAME=kafka-service
+          push: true
+          no-cache: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_OWNER }}/eshop-kafka-service:latest
+          secrets: |
+            GIT_AUTH_TOKEN=${{ secrets.GHCR_PAT }}
+      - id: set-output
+        if: ${{ always() }}
+        run: echo "built=${{ steps.build-step.outcome == 'success' }}" >> $GITHUB_OUTPUT
+
+  # --- Final Deploy Job ---
+  
+  deploy:
+    name: Deploy Affected Services
+    needs:
+      - build-user-ui
+      - build-seller-ui
+      - build-api-gateway
+      - build-auth-service
+      - build-product-service
+      - build-order-service
+      - build-chatting-service
+      - build-kafka-service
+    runs-on: ubuntu-latest
+    if: always() # Yeh hamesha chalega taaki hum check kar sakein
+
+    steps:
+      - name: Build list of affected services
+        id: build-list
+        run: |
+          AFFECTED_SERVICES=""
+          if [ "${{ needs.build-user-ui.outputs.built }}" == "true" ]; then AFFECTED_SERVICES="$AFFECTED_SERVICES user-ui"; fi
+          if [ "${{ needs.build-seller-ui.outputs.built }}" == "true" ]; then AFFECTED_SERVICES="$AFFECTED_SERVICES seller-ui"; fi
+          if [ "${{ needs.build-api-gateway.outputs.built }}" == "true" ]; then AFFECTED_SERVICES="$AFFECTED_SERVICES api-gateway"; fi
+          if [ "${{ needs.build-auth-service.outputs.built }}" == "true" ]; then AFFECTED_SERVICES="$AFFECTED_SERVICES auth-service"; fi
+          if [ "${{ needs.build-product-service
